objects/Daily_Narrative__c.object
<CustomObject>
    <description>Child object of the Trip Report, primarily used by the BSC associate to report daily updates about the various deliverables for the onsite install</description>
    <fields>
        <fullName>Associated_Trip_Report__c</fullName>
        <description>The Trip Report that is the parent for the narrative record</description>
        <inlineHelpText>If you create &quot;new&quot; from the Trip Report this field will auto-populate.  If Blank due to entry from object tab - please select the Trip Report for this narrative.</inlineHelpText>
        <label>Associated Trip Report</label>
        <referenceTo>Trip_Report__c</referenceTo>
        <relationshipLabel>Daily Narratives</relationshipLabel>
        <relationshipName>Daily_Narratives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BSC_Name__c</fullName>
        <formula>Associated_Trip_Report__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  Associated_Trip_Report__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Field to include the daily comments for the install progress</description>
        <inlineHelpText>Please enter your comments for the day completed</inlineHelpText>
        <label>Comments</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Field used to indicate the date for the comments</description>
        <inlineHelpText>Please select the proper date for the daily narrative.  It will default to today&apos;s date.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Why_did_you_work_more_than_10_hours__c</fullName>
        <description>Required response when you have indicated that you worked more than 10 hours in a day</description>
        <inlineHelpText>Please select the reason you worked more than 10 hours for this date.</inlineHelpText>
        <label>Why did you work more than 10 hours?</label>
        <picklist>
            <controllingField>Worked_more_than_10_hours__c</controllingField>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need actual field values</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Worked_more_than_10_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field to indicate if you worked more than 10 hours</description>
        <inlineHelpText>Check the box if you worked more than 10 hours for this entry date</inlineHelpText>
        <label>Worked more than 10 hours</label>
        <type>Checkbox</type>
    </fields>
    <label>Daily Narrative</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>Daily Narrative</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Narratives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>